# zen-icon-theme

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  data.in  import  index.theme.in  index.theme.sh  link.sh  make.sh  makepkg.sh  svg2png.sh.in
16x16/actions/: Makefile.am
16x16/animations/: Makefile.am
16x16/apps/: Makefile.am
16x16/categories/: Makefile.am
16x16/devices/: Makefile.am
16x16/emblems/: Makefile.am
16x16/emotes/: Makefile.am
16x16/mimetypes/: Makefile.am
16x16/places/: Makefile.am
16x16/status/: Makefile.am
22x22/actions/: Makefile.am
22x22/animations/: Makefile.am
22x22/apps/: Makefile.am
22x22/categories/: Makefile.am
22x22/devices/: Makefile.am
22x22/emblems/: Makefile.am
22x22/emotes/: Makefile.am
22x22/mimetypes/: Makefile.am
22x22/places/: Makefile.am
22x22/status/: Makefile.am
32x32/actions/: Makefile.am
32x32/animations/: Makefile.am
32x32/apps/: Makefile.am
32x32/categories/: Makefile.am
32x32/devices/: Makefile.am
32x32/emblems/: Makefile.am
32x32/emotes/: Makefile.am
32x32/mimetypes/: Makefile.am
32x32/places/: Makefile.am
32x32/status/: Makefile.am
cache/: PKGBUILD  PKGBUILD.in
dark/: Makefile.am  dark.lst  index.theme.in
dark-panel/: Makefile.am  dark-panel.lst  index.theme.in
data/: folders.dat.in
scalable/actions/: Makefile.am
scalable/apps/: Makefile.am
scalable/categories/: Makefile.am
scalable/devices/: Makefile.am
scalable/emblems/: Makefile.am
scalable/emotes/: Makefile.am
scalable/mimetypes/: Makefile.am
scalable/places/: Makefile.am
scalable/status/: Makefile.am
src/: Makefile.am  status.lst
stock/: Makefile.am
